--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,6 +4,9 @@
     flex-direction: row;
     justify-content: center;
     width: 100%;
+    background-image: url(img/bg.png);
+    background-size: cover;
+    background-position: 50% 50%;
 }
 
 .login-vendor .overlap-wrapper {
